@@ -30,7 +30,7 @@
   </ul>
 
   <p>For more detailed information about the error, please
-  refer to the HTML source for this page.
+  refer to the error log.
   </p>
 
   <p>If the error persists please contact the site maintainer.
